# fail-parallel

./: Cargo.toml
src/: lib.rs
tests/: tests.rs
