[package]
name = "fail-parallel"
version = "0.5.1"
authors = ["The SlateDB Project Developers"]
license = "Apache-2.0"
keywords = ["failpoints", "fail"]
repository = "https://github.com/slatedb/fail-parallel"
readme = "README.md"
homepage = "https://github.com/slatedb/fail-parallel"
documentation = "https://docs.rs/fail"
description = "Fail points for rust. A fork that supports parallel test execution."
categories = ["development-tools::testing"]
edition = "2021"
exclude = ["/.github/*", "/.travis.yml", "/appveyor.yml"]

[dependencies]
log = { version = "0.4", features = ["std"] }
once_cell = "1.9.0"
rand = "0.9"
tokio = { version = "1.40.0", features = ["sync", "time", "rt", "macros", "test-util"] }

[features]
failpoints = []

[package.metadata.docs.rs]
all-features = true
